force-app/main/default/objects/Endereco__c/Endereco__c.object-meta.xml
<CustomObject>
    <label>Endereco</label>
    <nameField>
        <label>Endereco Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enderecos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>