force-app/main/default/objects/Endereco__c/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <label>Bairro</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>