force-app/main/default/objects/Endereco__c/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <label>CEP</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>