force-app/main/default/objects/Endereco__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Enderecos</relationshipLabel>
    <relationshipName>Enderecos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>