force-app/main/default/objects/Endereco__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <displayFormat>CE-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Codigo</label>
    <type>AutoNumber</type>
</CustomField>