force-app/main/default/objects/Endereco__c/validationRules/validacao_nome.validationRule-meta.xml
<ValidationRule>
    <fullName>validacao_nome</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorMessage>Erro: Campo vazio. Por favor Insira um nome.</errorMessage>
</ValidationRule>